--- a/exercises/11-Font-Awesome-Icons/index.html
+++ b/exercises/11-Font-Awesome-Icons/index.html
@@ -9,7 +9,15 @@
 	</head>
 	<body>
 		<ul>
-			<li><i class="fas fa-camera-retro"></i> Hello</li>
+			<i class="fa-solid fa-code"></i>
+			<!-- "camera-retro" will be the name of the icon -->
+
+			You can find all the available names here: http://fontawesome.io/icons/
+			<li>
+				<a href="https://www.google.com/" target="_blank"><i class="fas fa-camera-retro"></i></a> This icon takes you to google
+			</li>
+			<li><i class="fa-solid fa-bath"></i> Duck time</li>
+			<!--Must use free icons of the web, need to use <link...>? not neccesary to make it work, and only online's url?-->
 		</ul>
 	</body>
 </html>
