--- a/exercises/13-Anchor-Like-Button/index.html
+++ b/exercises/13-Anchor-Like-Button/index.html
@@ -7,6 +7,7 @@
 		<title>13 Anchor Like Button</title>
 	</head>
 	<body>
-		<a href="#" class="orange-btn">Beautiful Button</a>
+		<a href="http://google.com" target="blank_" class="orange-btn">Beautiful Button</a>
+		<p>aqui sigue el texto</p>
 	</body>
 </html>
