--- a/exercises/06-Practicing-Rules/index.html
+++ b/exercises/06-Practicing-Rules/index.html
@@ -21,14 +21,12 @@
 		<h2>3 reasons you know love what you are learning</h2>
 		<ul>
 			<li>Time passes fast.</li>
-			<li>
-				You are anxious to finish this excercise and start the next one.
-			</li>
+			<li>You are anxious to finish this excercise and start the next one.</li>
 			<li>Is 12am and you don't want to go to sleep.</li>
 		</ul>
 		<p>
 			If you can't sleep, what better than watching videos of cats?
-			<a href="https://www.youtube.com/watch?v=WEgWMOzQ8IE">click here</a>
+			<a href="https://www.youtube.com/watch?v=WEgWMOzQ8IE" target="_blank">click here</a>
 		</p>
 	</body>
 </html>
