--- a/exercises/10-Your-Own-Font/index.html
+++ b/exercises/10-Your-Own-Font/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--your code here -->
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="stylesheet" type="text/css" href="./styles.css" />
+		<!--All below is neccesary to do it? How to do it with more font-familys-->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
-
-    <title>10 Your Own Font</title>
-  </head>
-  <body>
-    <h1 class="myTitle">My unique font</h1>
-  </body>
+		<title>10 Your Own Font</title>
+	</head>
+	<body>
+		<h1 class="myTitle">My unique font</h1>
+	</body>
 </html>
